<resources>
    <string name="app_name">Elomate</string>
    <string name="title_home">Home</string>
    <string name="title_assigment">Assigment</string>
    <string name="title_mentoring">Mentoring</string>
    <string name="title_report">Report</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invalid_password">Kata sandi tidak boleh kurang dari 8 karakter</string>
    <string name="hi_user">Hai, %s</string>
    <string name="session_expired">Sesi telah berakhir. Silakan masuk kembali.</string>
    <string name="role">Management Trainee\n</string>
</resources>