<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_assigment"
        android:icon="@drawable/ic_assigment"
        android:title="@string/title_assigment" />

    <item
        android:id="@+id/navigation_mentoring"
        android:icon="@drawable/ic_mentoring"
        android:title="@string/title_mentoring" />

    <item
        android:id="@+id/navigation_report"
        android:icon="@drawable/ic_report"
        android:title="@string/title_report" />

    <item
        android:id="@+id/navigation_profil"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />

</menu>